# TicketsPreOrderService

./: .dockerignore  .env  .gitignore  README.md  compose.yaml  docker_compose.yml  package-lock.json  package.json  user_stories.md
AdminService/: .gitignore  CMakeLists.txt  Dockerfile  main.cpp  openapi.yaml  openapi_admin.yaml
AdminService/config/ssl/: cert.pem  key.pem
AdminService/postgres/: PostgresProcessing.h  pending_organizers.sql
AdminService/src/: ProcessOrganizers.cpp  ProcessOrganizers.h  processRequests.cpp  processRequests.h
AdminService/src/api/: RequestsHandler.cpp  RequestsHandler.h
AdminService/src/postgres/: PostgresProcessing.cpp  PostgresProcessing.h  pending_organizers.sql
AdminService/tests/: config.py  test_add_request.py  test_get_pending_requests.py
AuthorizationService/: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  build.ninja  cmake_install.cmake  config.ini  db_org_registr.sql  docker-compose.yml  main.cpp  openapi.yaml  openapi_auth.yaml  requests.txt  requirements.txt
AuthorizationService/Authorization/: AuthorizationManager.cpp  AuthorizationManager.h  OrganizerAuthorizationImpl.cpp  OrganizerAuthorizationImpl.h
AuthorizationService/AuxiliaryFunctions/: AuxiliaryFunctions.h
AuthorizationService/OrganizerRegistration/: OrganizerRegistrationImpl.cpp  OrganizerRegistrationImpl.h  RegistrationManager.cpp  RegistrationOrganizerManager.cpp  RegistrationOrganizerManager.h
AuthorizationService/UserRegistration/: RegistrationUserManager.cpp  RegistrationUserManager.h  UserRegistrationImpl.cpp  UserRegistrationImpl.h
AuthorizationService/UserRegistration/PasswordGenerator/: PasswordCreator.cpp  PasswordCreator.h
AuthorizationService/UserRegistration/PasswordGenetator/: PasswordCreator.cpp  PasswordCreator.h
AuthorizationService/config/ssl/: cert.pem  key.pem
AuthorizationService/postgres/: PostgresProcessing.cpp  PostgresProcessing.h  db_org_registr.sql
AuthorizationService/src/: ErrorHandler.h
AuthorizationService/src/Admin/: AdminAuthorization.cpp  AdminAuthorization.h  AdminCreation.cpp  AdminCreation.h
AuthorizationService/src/Authorization/: AdminCreation.cpp  AdminCreation.h  AuthorizationManager.cpp  AuthorizationManager.h
AuthorizationService/src/AuxiliaryFunctions/: AuxiliaryFunctions.cpp  AuxiliaryFunctions.h
AuthorizationService/src/OrganizerRegistration/: RegistrationOrganizerManager.cpp  RegistrationOrganizerManager.h
AuthorizationService/src/UserRegistration/: RegistrationUserManager.cpp  RegistrationUserManager.h
AuthorizationService/src/api/: PasswordUpdating.h
AuthorizationService/src/postgres/: PostgresProcessing.cpp  PostgresProcessing.h  db_org_registr.sql
AuthorizationService/tests/: config.py  test_authorization.py  test_change_password.py  test_organizer_registration.py  test_user_registration.py  utils.py
OrganizerService/: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  OrganizerService  cmake_install.cmake  main.cpp  openapi_organizer.yaml
OrganizerService/MatchCreating/AddingTickets/: AddingTickets.h
OrganizerService/MatchCreating/CreateMatch/: Creator.cpp  Creator.h
OrganizerService/MatchCreating/UpdateMatchInfo/: Updator.cpp  Updator.h
OrganizerService/OrganizerAccountCRUD/CreateData/: CreateOrganizerInfo.cpp  CreateOrganizerInfo.h
OrganizerService/OrganizerAccountCRUD/UpdateData/: UpdateOrganizerInfo.cpp  UpdateOrganizerInfo.h
OrganizerService/config/: config.h  config.yaml
OrganizerService/config/ssl/: cert.pem  key.pem
OrganizerService/postgres/: PostgresProcessing.cpp  PostgresProcessing.h  organizer_personal_account.sql
OrganizerService/src/FormatRegexHelper/: ValidDataChecker.h
OrganizerService/src/OrganizerAccountCRUD/: CreateOrganizerAccount.cpp  CreateOrganizerAccount.h  GetAccountInfo.cpp  GetAccountInfo.h  UpdateOrganizerAccount.cpp  UpdateOrganizerAccount.h
OrganizerService/src/organizer_crud/: CreateOrganizerAccount.cpp  CreateOrganizerAccount.h  GetAccountInfo.cpp  GetAccountInfo.h  UpdateOrganizerAccount.cpp  UpdateOrganizerAccount.h
OrganizerService/src/postgres/: PostgresProcessing.cpp  PostgresProcessing.h  db_org_registr.sql  organizer_personal_account.sql
OrganizerService/tests/: config.py  utils.py
OrganizerService/tests/test_match_creating/: test_create_event.py
OrganizerService/tests/tests_crud_organizer_account/: test_create_account.py  test_get_info.py  test_update_organizer_account.py
PaymentService/: .gitignore  CMakeLists.txt  Dockerfile  main.cpp  openapi_payments.yaml
PaymentService/config/: config.cpp  config.h  config.yaml
PaymentService/src/: ErrorHandler.h
PaymentService/src/database/: payment.sql
PaymentService/src/postgres/: PostgresProcessing.cpp
PaymentService/src/utils/: ErrorHandler.h
PaymentService/tests/: config.py  test_add_provider.py  test_create_payment.py  test_operation_status.py  test_refund.py
TicketsService/: .gitignore  CMakeLists.txt  Dockerfile  main.cpp  openapi_tickets.yaml
TicketsService/src/: ErrorHandler.h  Helper.h
TicketsService/src/utils/: Helper.h
TicketsService/tests/: config.py  test_get_tickets.py  test_tickets_creating.py  ticket_id_cancel_and_reserve.py
UserService/: .gitignore  CMakeLists.txt  Dockerfile  UserPersonal_InfoUpdate.cpp  UserPersonal_InfoUpdate.h  main.cpp  openapi_user.yaml
UserService/config/: config.cpp  config.h
UserService/postgres/: PostgresProcessing.cpp  PostgresProcessing.h  user_personal_account.sql
UserService/tests/: config.py  test_crud_preorder.py  test_crud_user.py  test_redis.py  utils.py
WebhookMockService/: CMakeLists.txt  Dockerfile  main.cpp
WebhookMockService/ProcessPayment/: PaymentWorker.h
orchestrator/: .env  Cargo.toml  Dockerfile
orchestrator/src/: lib.rs  main.rs
orchestrator/tests/: admin_tests.rs  auth_tests.rs  matches_tests.rs  org_tests.rs  payments_tests.rs  tickets_tests.rs  user_tests.rs
orchestrator/tmp/: CPbyjbm8Aw  otzREzzzUw  tickets_crud
queue_processor/: Cargo.toml  Dockerfile
queue_processor/src/: lib.rs  main.rs
queue_processor/tests/: tests.rs
(+430 files in other folders)
