[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.43.0"
actix-web = "4.9.0"
env_logger = "0.11.6"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
actix-cors = "0.7.0"
dotenv = "0.15.0"
chrono = "0.4.39"
log = "0.4.22"
serde_json = "1.0.135"
