[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
env_logger = "0.11.6"
reqwest = { version = "0.12.12", features = ["json", "multipart", "stream", "cookies"] }
serde = { version = "1.0.217", features = ["derive"] }
actix-cors = "0.7.0"
dotenv = "0.15.0"
chrono = { version = "0.4.39", features = ["serde"] }
log = "0.4.22"
serde_json = "1.0.135"
config="0.15.6"
thiserror = "2.0.11"
jsonwebtoken = "9.3.1"
utoipa = { version = "5.3.1", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
actix-multipart = "0.7.2"
futures = "0.3.31"
rand = "0.8.5"
tokio = {version = "1.43.0", features = ["full"]}
tokio-util = "0.7.13"
rdkafka = { version = "0.37.0", features = ["cmake-build"] }

[dev-dependencies]
pretty_assertions = "1"
serial_test = "2.0.0"