[package]
name = "queue_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
dotenv = "0.15.0"
tokio = { version = "1.44.1", features = ["full"] }
log = "0.4.27"
env_logger = "0.11.7"
redis = { version = "0.29.2" , features = ["tokio-comp"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
config="0.15.6"
thiserror = "2.0.12"
reqwest = { version = "0.12.15", features = ["json"] }
futures-util = "0.3.31"
chrono = { version = "0.4.40", features = ["serde"] }
actix-web = "4.10.2"